--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,12 @@ body {
 * {
   @apply focus:outline-1 focus:outline-neutral-300 dark:focus:outline-neutral-900;
 }
+
+*:not(svg, svg *, span) {
+  /* https://www.youtube.com/watch?v=QBnXaaadp50&t=1190s */
+  @apply transition-colors duration-300;
+}
+
+a {
+  @apply duration-0;
+}
